--- a/src/index.css
+++ b/src/index.css
@@ -1,42 +1,26 @@
+
 :root {
   font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
   font-weight: 400;
-
-  
-  background-color: #dfcd5e;
-
   font-synthesis: none;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
+
+
 body {
   margin: 0;
   display: flex;
-  place-items: center;
+  justify-content: center; 
+  align-items: flex-start;
   min-width: 320px;
   min-height: 100vh;
-
-   /* background: 
-        linear-gradient(135deg, #d96131 25%, transparent 25%) -50px 0,
-        linear-gradient(225deg, #ecf0f1 25%, transparent 25%) -50px 0,
-        linear-gradient(315deg, #d96131 25%, transparent 25%),
-        linear-gradient(45deg, #ecf0f1 25%, transparent 25%);
-    background-size: 100px 100px;
-    background-color: #f08787; */
-
-
-   /* background-color: #FF7E2E;
-background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='550' height='66' viewBox='0 0 1000 120'%3E%3Cg fill='none' stroke='%23D63D1C' stroke-width='10' %3E%3Cpath d='M-500 75c0 0 125-30 250-30S0 75 0 75s125 30 250 30s250-30 250-30s125-30 250-30s250 30 250 30s125 30 250 30s250-30 250-30'/%3E%3Cpath d='M-500 45c0 0 125-30 250-30S0 45 0 45s125 30 250 30s250-30 250-30s125-30 250-30s250 30 250 30s125 30 250 30s250-30 250-30'/%3E%3Cpath d='M-500 105c0 0 125-30 250-30S0 105 0 105s125 30 250 30s250-30 250-30s125-30 250-30s250 30 250 30s125 30 250 30s250-30 250-30'/%3E%3Cpath d='M-500 15c0 0 125-30 250-30S0 15 0 15s125 30 250 30s250-30 250-30s125-30 250-30s250 30 250 30s125 30 250 30s250-30 250-30'/%3E%3Cpath d='M-500-15c0 0 125-30 250-30S0-15 0-15s125 30 250 30s250-30 250-30s125-30 250-30s250 30 250 30s125 30 250 30s250-30 250-30'/%3E%3Cpath d='M-500 135c0 0 125-30 250-30S0 135 0 135s125 30 250 30s250-30 250-30s125-30 250-30s250 30 250 30s125 30 250 30s250-30 250-30'/%3E%3C/g%3E%3C/svg%3E"); */
-  
-   
-
-   background: linear-gradient(-45deg, #ed7b58, #f03737, #ffee71, #82ed71);
-    background-size: 400% 400%;
-    animation: gradient 25s ease infinite;
-
+  background: linear-gradient(-45deg, #ed7b58, #f03737, #ffee71, #82ed71);
+  background-size: 400% 400%;
+  animation: gradient 25s ease infinite;
 }
 
 
@@ -46,10 +30,23 @@ background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/s
     100% { background-position: 0% 50%; }
 }
 
+
 h1 {
   font-size: 3.2em;
   line-height: 1.1;
 }
 
 
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+html, body {
+  overflow-x: hidden;
+  width: 100%;
+  max-width: 100%;
+}
 
